# Bombercraft

./: .clang-format  .gitignore  CMakeLists.txt  ConfigFileTest  Dockerfile  Dockerfile-linux  Dockerfile-mac  README.md  bombercraft.config  bomberman.config
.github/workflows/: compilation.yaml
Asset/Animation/Anim_Bomb_37/: Anim_Bomb_000003.mtl  Anim_Bomb_000011.mtl  Anim_Bomb_000021.mtl
Asset/Animation/Anim_Death_53/: Anim_Death_000003.mtl  Anim_Death_000008.mtl  Anim_Death_000037.mtl
Asset/Animation/Anim_Defeat_20/: Anim_Defeat_000009.mtl  Anim_Defeat_000014.mtl
Asset/Animation/Anim_Fire_32/: Anim_Fire_000009.mtl  Anim_Fire_000025.mtl
Asset/Animation/Anim_Set_Bomb_9/: Anim_Set_Bomb_000002.mtl  Anim_Set_Bomb_000005.mtl  Anim_Set_Bomb_000009.mtl
Asset/Animation/Anim_Victory_32/: Anim_Victory_000023.mtl  Anim_Victory_000024.mtl
Asset/Animation/Anim_Walk_20/: Anim_Walk_000002.mtl  Anim_Walk_000013.mtl
Asset/Animation/Walk_20/: Model_Walk_000002.mtl  Model_Walk_000003.mtl  Model_Walk_000007.mtl  Model_Walk_000040.mtl
Asset/Model/Char/: Model_Char.mtl
Asset/Model/Model_Block/: Model_Block.mtl
Asset/Model/Model_Bomb/: Model_Bomb.mtl
Asset/Model/Model_Char/: Model_Char.mtl
Asset/Model/Model_Fire/: Model_Fire.mtl
include/: EntityType.hpp  IFactoryData.hpp  utilities.hpp
lib/crossLib/: CMakeLists.txt
lib/crossLib/include/: Unistd.hpp
lib/crossLib/src/: Unistd.cpp
lib/gameEngine/: CMakeLists.txt
lib/gameEngine/include/: GameEngine.hpp  IComponentContainer.hpp  IComponentTypeRegister.hpp  IEventManager.hpp  entity.hpp  env.hpp
lib/gameEngine/include/components/: EntityBox.hpp  Position.hpp  Velocity.hpp
lib/gameEngine/src/: main.cpp
lib/gameEngine/src/AbstractScene/: AbstractScene.cpp  AbstractScene.hpp
lib/gameEngine/src/AbstractSystem/: AbstractSystem.cpp  AbstractSystem.hpp
lib/gameEngine/src/Component/: Component.cpp  Component.hpp
lib/gameEngine/src/ComponentContainer/: ComponentContainer.hpp  ComponentTypeRegister.hpp
lib/gameEngine/src/ComponentTypeRegister/: ComponentTypeRegister.hpp
lib/gameEngine/src/EntityContainer/: EntityContainer.cpp  EntityContainer.hpp  EntityRegister.cpp  EntityRegister.hpp
lib/gameEngine/src/EntityManager/: EntityManager.cpp  EntityManager.hpp
lib/gameEngine/src/EntityPack/: EntityPack.cpp  EntityPack.hpp
lib/gameEngine/src/SaveManager/: SaveManager.cpp  SaveManager.hpp
lib/gameEngine/src/SceneManager/: SceneManager.cpp  SceneManager.hpp
lib/gameEngine/src/System/: System.hpp
lib/gameEngine/src/SystemManager/: SystemManager.cpp  SystemManager.hpp
lib/gameEngine/src/Systems/PhysicsSystem/: PhysicsSystem.cpp  PhysicsSystem.hpp
lib/gameEngine/src/Systems/TimerSystem/: TimerSystem.cpp  TimerSystem.hpp
lib/gameEngine/src/components/: Event.hpp  Position.hpp  Render2D.hpp  Render3D.hpp  Script.hpp  Timer.cpp  Timer.hpp  Velocity.hpp
lib/gameEngine/src/system/PhysicsSystem/: PhysicsSystem.cpp  PhysicsSystem.hpp
lib/gameEngine/src/system/TimerSystem/: TimerSystem.cpp  TimerSystem.hpp
lib/gameEngine/src/systems/PhysicsSystem/: PhysicsSystem.cpp  PhysicsSystem.hpp
lib/gameEngine/src/systems/TimerSystem/: TimerSystem.hpp
lib/raylibCpp/: CMakeLists.txt
lib/raylibCpp/cmake/: Findraylib.cmake
lib/raylibCpp/include/: I3DObject.hpp  ICollidable.hpp  IMovable.hpp  IRenderable.hpp  export.hpp  include.hpp  object.hpp  raylib.hpp
lib/raylibCpp/src/: main.cpp
lib/raylibCpp/src/Audio/: IAudio.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
lib/raylibCpp/src/Camera/: Camera.cpp  Camera.hpp  ICamera.hpp
lib/raylibCpp/src/Collision/: Collision.cpp  Collision.hpp  ICollision.hpp
lib/raylibCpp/src/Collision/ObjectType/: ObjectBox.cpp  ObjectBox.hpp  ObjectCircle.cpp  ObjectCircle.hpp  ObjectLine.cpp  ObjectLine.hpp  ObjectRectangle.cpp  ObjectRectangle.hpp  ObjectSphere.cpp  ObjectSphere.hpp  ObjectTriangle.cpp  ObjectTriangle.hpp
lib/raylibCpp/src/Collisionable/: ICollisionable.hpp
lib/raylibCpp/src/Data/: Const.cpp  Const.hpp  Enum.hpp  Struct.hpp
lib/raylibCpp/src/Data/MyVector/: MyVector2.cpp  MyVector2.hpp  MyVector3.cpp  MyVector3.hpp  MyVector4.cpp  MyVector4.hpp
lib/raylibCpp/src/File/: IFile.hpp  Save.cpp  Save.hpp
lib/raylibCpp/src/Font/: Font.cpp  Font.hpp  IFont.hpp
lib/raylibCpp/src/Input/: IInput.hpp  Input.cpp  Input.hpp
lib/raylibCpp/src/LoaderManager/: ILoaderManager.hpp  LoaderManager.hpp
lib/raylibCpp/src/Model/: Animation.cpp  Animation.hpp  IModel.hpp  Model.cpp  Model.hpp
lib/raylibCpp/src/ShaderManage/: IShaderManage.hpp  ShaderManage.cpp  ShaderManage.hpp
lib/raylibCpp/src/Shape/: IShape.hpp  Rectangle.cpp  Rectangle.hpp
lib/raylibCpp/src/Solid/: Cube.cpp  Cube.hpp  Cuboid.cpp  Cuboid.hpp  ISolid.hpp
lib/raylibCpp/src/Text/: IText.hpp  Text.cpp  Text.hpp
lib/raylibCpp/src/Texture/: ITexture.hpp  Texture.cpp  Texture.hpp  TextureSequence.cpp  TextureSequence.hpp
lib/raylibCpp/src/Window/: IWindow.hpp  Window.cpp  Window.hpp
src/: main.cpp  utilities.cpp
src/Components/: ClickEvent.cpp  ClickEvent.hpp  KeyBox.hpp  KeyEvent.hpp  MouseMoveEvent.cpp  MouseMoveEvent.hpp  PlayerIdBox.hpp
src/Components/AbstractEvent/: AbstractEvent.cpp  AbstractEvent.hpp
src/Components/Chrono/: Chrono.cpp  Chrono.hpp
src/Components/ClickEvent/: ClickEvent.cpp
src/Components/FocusEvent/: ClickFocusEvent.cpp  ClickFocusEvent.hpp
src/Components/Hitbox/: Hitbox.cpp  Hitbox.hpp
src/Components/Matrix2D/: Matrix2D.cpp  Matrix2D.hpp
src/Components/ModelList/: ModelList.cpp  ModelList.hpp
src/Components/MouseMoveEvent/: MouseMoveEvent.cpp  MouseMoveEvent.hpp
src/Components/Music/: Music.cpp  Music.hpp
src/Components/Option/: OptionComponent.cpp  OptionComponent.hpp
src/Components/PlayerConfig/: PlayerConfig.cpp  PlayerConfig.hpp
src/Components/PlayerInventory/: PlayerInventory.cpp  PlayerInventory.hpp
src/ConfigFile/: ConfigFile.cpp  ConfigFile.hpp  IConfigFile.hpp
src/Exceptions/: Exceptions.cpp  Exceptions.hpp
src/Game/Core/: Core.cpp  (+1 more)
src/Utilities/: Clock.cpp  Clock.hpp  ProportionUtilities.hpp
tests/: mainTestGameEngine.cpp
(+153 files in other folders)
